Fixed scrollbar and z-index, header on some
Fixed scroll bar and z layout of elements, changed header a little and fixed some css

--- a/styles/header_footer.css
+++ b/styles/header_footer.css
@@ -8,7 +8,9 @@ body {
     flex-direction: column;
     word-wrap: break-word;
   }
-  
+  :root {
+    scrollbar-width: none !important;
+  }
   ::-webkit-scrollbar {
     display: none;
   }
@@ -20,7 +22,7 @@ body {
   width: 100%;
   }
   
-  header {
+  .navbar {
     position: fixed;
     margin-top: 1%;
     margin-right: 1%;
@@ -36,6 +38,7 @@ body {
     padding: 5px;
     padding-right: 10px;
     box-shadow: 1px 2px 5px black;    
+    z-index: 1;
   }
   
   .bubble {
@@ -139,11 +142,7 @@ body {
   
   
   @media (max-width: 500px)
-  {
-    body {
-      margin: 0;
-    }
-  
+  { 
     .head {
       display: none;
     }
@@ -153,6 +152,7 @@ body {
       flex-direction: row;
       justify-content: flex-end;
       width: 100%;
+      box-shadow: 1px 1px 2px black;
     }
   
     .sidenav {
@@ -176,6 +176,8 @@ body {
       /* margin: 10px; */
       border-radius: 50%;
       position: fixed;
+      z-index: 1;
+      box-shadow: 2px 2px 3px #000000;
     }
     .button1:hover {
       background-color: #00458b;
